<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal_multipay_sdk">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_register_logo_multipay_sdk"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="@dimen/margin_big_multipay_sdk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_no_text_multipay_sdk" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_title_register_multipay_sdk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wallet_description_multipay_sdk"
                android:layout_marginStart="@dimen/margin_normal_multipay_sdk"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_register_logo_multipay_sdk"
                app:layout_constraintTop_toTopOf="@+id/image_register_logo_multipay_sdk" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_description_register_multipay_sdk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_multipay_sdk"
                android:text="@string/wallet_description_multipay_sdk"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_register_multipay_sdk"
                app:layout_constraintTop_toBottomOf="@+id/text_title_register_multipay_sdk" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_register_personal_info_multipay_sdk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_multipay_sdk"
                android:text="@string/register_personal_info_label_text_multipay_sdk"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description_register_multipay_sdk" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/testTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_multipay_sdk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_register_personal_info_multipay_sdk">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/testTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cep Telefonu Numaranız"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:padding="@dimen/margin_normal_multipay_sdk"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_name_multipay_sdk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_multipay_sdk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/testTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_name_multipay_sdk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_name_multipay_sdk"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:padding="@dimen/margin_normal_multipay_sdk"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_surname_multipay_sdk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big_multipay_sdk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_name_multipay_sdk">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_surname_multipay_sdk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_lastname_multipay_sdk"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:padding="@dimen/margin_normal_multipay_sdk"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register_multipay_sdk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_multipay_sdk"
                android:layout_marginTop="@dimen/margin_normal_multipay_sdk"
                android:text="@string/register_button_multipay_sdk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_surname_multipay_sdk" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/register_progress_multipay_sdk"
        layout="@layout/layout_progress_multipay_sdk" />

</androidx.constraintlayout.widget.ConstraintLayout>